<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/color_background"
    >
    <TextView 
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_check_join_match"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        />
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:textSize="15sp"
        android:weightSum="2"
        >
        <Button 
            android:id="@+id/bt_yes_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
             android:layout_weight="1"
            android:text="@string/yes"
            style="?android:attr/buttonStyle"
            android:background="@drawable/bg_button"
            android:textColor="@color/color_button_login"
            />
        <Button 
            android:id="@+id/bt_no_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_weight="1"
            style="?android:attr/buttonStyle"
            android:background="@drawable/bg_button"
            android:textColor="@color/color_button_login"
            />
</LinearLayout>
</LinearLayout>
