<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_background"
     >
        <TextView 
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/color_text"
        android:textSize="20sp"
        android:textStyle="bold"
        />
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
         android:layout_margin="10dp" >
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:layout_weight="2" />
        <EditText 
            android:id="@+id/et_account_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="16sp"
            android:inputType="text"
            android:layout_weight="1" />
     </LinearLayout>
     
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
         android:layout_margin="10dp" >
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_pass"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:layout_weight="2" />
        <EditText 
            android:id="@+id/et_pass_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:layout_weight="1" />
     </LinearLayout>
    <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
         android:layout_margin="10dp" >
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_email"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:layout_weight="2" />

         <EditText
             android:id="@+id/et_email_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textEmailAddress"
             android:textSize="16sp" 
             android:layout_weight="1" 
             >

             <requestFocus />
         </EditText>

     </LinearLayout>
	<LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
         android:layout_margin="10dp" >
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_phone"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:layout_weight="2" />
        <EditText 
            android:id="@+id/et_phone_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="16sp"
            android:inputType="phone"
            android:layout_weight="1" />
     </LinearLayout>
     
	<LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
         android:layout_margin="10dp" >
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:layout_weight="2" />

         <Spinner
             android:id="@+id/spinner_city_register"
             android:layout_width="200dp"
             android:layout_height="37dp"
             android:ems="10"
             android:inputType="text" />

     </LinearLayout>
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
         android:layout_margin="10dp" >
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:layout_weight="2" />
        <Spinner
            android:id="@+id/spinner_district_register"
            android:layout_width="200dp"
            android:layout_height="37dp" />
     </LinearLayout>
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:textSize="15sp"
        android:weightSum="2"
        >
        <Button 
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
             android:layout_weight="1"
            android:text="@string/register_bt_register"
            style="?android:attr/buttonStyle"
            android:background="@drawable/bg_button"
            android:textColor="@color/color_button_login"
            />
        <Button 
            android:id="@+id/bt_cancel_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_bt_cancel"
            android:layout_weight="1"
            style="?android:attr/buttonStyle"
            android:background="@drawable/bg_button"
            android:textColor="@color/color_button_login"
            />
        
    </LinearLayout>
</LinearLayout>
